<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/iconhomepage"
            android:title="@string/main" />
        <item
            android:id="@+id/nav_science"
            android:icon="@drawable/icon_science"
            android:title="@string/sciene" />
        <item
            android:id="@+id/nav_technoloy"
            android:icon="@drawable/icon_tech"
            android:title="@string/technoloy" />
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/icon_football"
            android:title="@string/sports" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/icon_book"
            android:title="@string/book" />
        <item
            android:id="@+id/nav_matches_today"
            android:icon="@drawable/icon_football"
            android:title="@string/goals" />

    </group>

    <item android:title="الاستفسارات">
        <menu>
            <item
                android:id="@+id/nav_question"
                android:icon="@drawable/icon_makequesation"
                android:title="@string/question"
                 />
            <item
                android:id="@+id/nav_orderBook"
                android:icon="@drawable/icon_orderbook"
                android:title="@string/order_book"
                />
            <item
                android:id="@+id/nav_collect_points"
                android:icon="@drawable/icon_collect"
                android:title="@string/collect_points"
                />
        </menu>
    </item>

</menu>
